# anim

./: .gitignore  Cargo.toml
src/: main.rs
src/parsers/: anime.rs  common.rs  mod.rs  select.rs  video.rs
src/parsers/gogo/: anime.rs  mod.rs
