[package]
name = "anim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"

# reqwest-impersonate = { git = "https://github.com/4JX/reqwest-impersonate.git", ref = "ab348c0", default-features = false, features = [
#     "chrome",
#     "blocking",
# ] }

reqwest-impersonate = { path = "../reqwest", default-features = false, features = [
    "chrome",
    "blocking",
] }
scraper = "0.13.0"

# tracing-subscriber = "0.3.15"

[patch.crates-io]
hyper = { git = "https://github.com/4JX/hyper.git", branch = "v0.14.18-patched" }
# hyper = { path = "../hyper" }
h2 = { git = "https://github.com/4JX/h2.git", branch = "imp" }
# h2 = { path = "../h2" }

# [patch."https://github.com/4JX/h2"]
# h2 = { path = "../h2", version = "=0.3.14" }


# reqwest = { version = "0.11.11", features = ["blocking"] }
